# Meta-Scalar

./: Dockerfile  LICENSE  README.md  __init__.py  baseline_fixed.json  baseline_scores.json  benchmark.py  cleanup.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
api/: __init__.py  app.py
baseline/: run_baseline.py
environment/: __init__.py  env.py  models.py  tasks.py
server/: app.py
tests/: test_api.py  test_env.py  test_run_baseline.py  test_tasks.py
